<?xml version="1.0"?>
<package>
  <name>robocom_msgs</name>
  <version>0.1.0</version>
  <description>The robocom package</description>

  <maintainer email="matteo.luperto@polimi.it">Matteo Luperto</maintainer>

  <license>GPLv3</license>


  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>

</package>
